# ida-swarm

./: .gitignore  .syncignore  CMakeLists.txt  README.md  ida-plugin.json  llm_re_config.json.example  plugin.cpp  sample_file.cpp  sync_to_public.sh  test_mcp.py
agent/: agent.h  agent_irc_tools.h  agent_lldb_tools.h  agent_plugin.cpp  conflict_detector.cpp  conflict_detector.h  consensus_executor.cpp  consensus_executor.h  event_bus.h  grader.cpp  grader.h  message_adapter.h  swarm_agent.cpp  swarm_agent.h  swarm_logger.cpp  swarm_logger.h  tool_system.h
analysis/: actions.cpp  actions.h  deep_analysis.cpp  deep_analysis.h  function_prioritizer.cpp  function_prioritizer.h  memory.cpp  memory.h  memory_tool.cpp  memory_tool.h
api/: anthropic_api.cpp  anthropic_api.h  api_common.h  message_types.h  oauth_authorizer.cpp  oauth_authorizer.h  oauth_flow.cpp  oauth_flow.h  oauth_manager.cpp  oauth_manager.h  pricing.h  token_stats.h  tool_registry.h
cmake/: BuildKeystone.cmake  PatchKeystone.cmake  PatchKeystoneSTL.cmake
core/: common.h  common_base.h  config.cpp  config.h  ida_utils.cpp  ida_utils.h  ida_validators.h  logger.cpp  logger.h  oauth_authorizer.cpp  oauth_authorizer.h  oauth_manager.cpp  oauth_manager.h  plugin.cpp  profiler.h  profiler_adapter.h  profiling_manager.h  ssh_key_manager.cpp  ssh_key_manager.h  types.h
docs/: architecture-agent.mmd  architecture-conflict.mmd  architecture-main.mmd  architecture-replication.mmd  architecture-sequence.mmd  generate-diagrams.sh
irc/: irc_client.cpp  irc_client.h  irc_server.cpp  irc_server.h
mcp_server/include/: mcp_server.h  session_manager.h  stdio_mcp_server.h
mcp_server/src/: mcp_server.cpp  session_manager.cpp  stdio_mcp_server.cpp
orchestrator/: agent_spawner.cpp  agent_spawner.h  auto_decompile_manager.cpp  auto_decompile_manager.h  database_manager.cpp  database_manager.h  lldb_manager.cpp  lldb_manager.h  merge_manager.cpp  merge_manager.h  nogo_zone_manager.cpp  nogo_zone_manager.h  orchestrator.cpp  orchestrator.h  orchestrator_logger.cpp  orchestrator_logger.h  orchestrator_plugin.cpp  orchestrator_tools.h  remote_device_info.cpp  remote_device_info.h  remote_sync_manager.cpp  remote_sync_manager.h  tool_call_tracker.cpp  tool_call_tracker.h
patching/: code_injection_manager.cpp  code_injection_manager.h  patch_manager.cpp  patch_manager.h
sdk/: claude_sdk.h  common.h
sdk/auth/: oauth_account_pool.cpp  oauth_account_pool.h  oauth_authorizer.cpp  oauth_authorizer.h  oauth_credentials.h  oauth_flow.cpp  oauth_flow.h  oauth_manager.cpp  oauth_manager.h
sdk/client/: client.cpp  client.h
sdk/messages/: types.h
sdk/metrics/: metrics_collector.h
sdk/tools/: registry.h
sdk/usage/: pricing.h  stats.h
semantic_patch/: c_compiler.cpp  c_compiler.h  calling_convention.cpp  calling_convention.h  semantic_patch_manager.cpp  semantic_patch_manager.h
skills/ida-swarm/: SKILL.md
src/: actions.cpp  actions.h  agent.cpp  agent.h  anthropic_api.cpp  anthropic_api.h  anthropic_client.cpp  anthropic_client.h  assembly_patcher.cpp  assembly_patcher.h  byte_patcher.cpp  byte_patcher.h  common.h  deep_analysis.cpp  deep_analysis.h  ida_utils.cpp  ida_utils.h  ida_validators.h  main_form.cpp  main_form.h  memory.cpp  memory.h  message_types.h  patch_manager.cpp  patch_manager.h  plugin.cpp  plugin.h  qt_widgets.cpp  qt_widgets.h  tool_patch.cpp  tool_patch.h  tool_system.h
ui/: activity_feed_panel.cpp  activity_feed_panel.h  auto_decompile_progress_panel.cpp  auto_decompile_progress_panel.h  device_editor_dialog.cpp  device_editor_dialog.h  log_window.cpp  log_window.h  main_form.cpp  main_form.h  orchestrator_ui.cpp  orchestrator_ui.h  orchestrator_worker.cpp  orchestrator_worker.h  patch_tracker.cpp  patch_tracker.h  preferences_dialog.cpp  preferences_dialog.h  qt_widgets.cpp  qt_widgets.h  stats_aggregator.cpp  stats_aggregator.h  ui_common.h  ui_integration.h  ui_orchestrator_bridge.cpp  ui_orchestrator_bridge.h
ui_v2/core/: agent_controller.cpp  agent_controller.h  animation_manager.cpp  animation_manager.h  base_styled_widget.cpp  base_styled_widget.h  color_constants.cpp  color_constants.h  effects_manager.cpp  effects_manager.h  focus_manager.cpp  focus_manager.h  json_utils.h  settings_manager.cpp  settings_manager.h  theme_constants.h  theme_manager.cpp  theme_manager.h  theme_templates.cpp  theme_templates.h  theme_transition_manager.cpp  theme_transition_manager.h  theme_undo_manager.cpp  theme_undo_manager.h  ui_constants.h  ui_utils.cpp  ui_utils.h  ui_v2_common.h
ui_v2/models/: conversation_model.cpp  conversation_model.h  tool_execution.h
ui_v2/views/: console_dock.cpp  console_dock.h  conversation_view.cpp  conversation_view.h  floating_inspector.cpp  floating_inspector.h  main_window.cpp  main_window.h  memory_dock.cpp  memory_dock.h  settings_dialog.cpp  settings_dialog.h  statistics_dock.cpp  statistics_dock.h  tool_execution_dock.cpp  tool_execution_dock.h
ui_v2/views/theme_editor/: theme_editor_dialog.cpp  theme_editor_dialog.h
ui_v2/views/theme_editor/widgets/: accessibility_tools.cpp  accessibility_tools.h  animation_config_widget.cpp  animation_config_widget.h  chart_theme_widget.cpp  chart_theme_widget.h  color_picker_widget.cpp  color_picker_widget.h  effects_config_widget.cpp  effects_config_widget.h  theme_preview_widget.cpp  theme_preview_widget.h  theme_save_as_dialog.cpp  theme_save_as_dialog.h  theme_template_selector.cpp  theme_template_selector.h
ui_v2/widgets/: command_palette.cpp  command_palette.h  markdown_viewer.cpp  markdown_viewer.h  message_bubble.cpp  message_bubble.h  message_group.cpp  message_group.h  theme_selector_widget.cpp  theme_selector_widget.h  tool_execution_visualizer.cpp  tool_execution_visualizer.h
ui_v2/widgets/charts/: bar_chart.cpp  bar_chart.h  chart_theme.cpp  chart_theme.h  chart_types.cpp  chart_types.h  circular_chart.cpp  circular_chart.h  custom_chart_base.cpp  custom_chart_base.h  heatmap_widget.cpp  heatmap_widget.h  line_chart.cpp  line_chart.h  sparkline_widget.cpp  sparkline_widget.h
